fix: form spacing bug on sign in modal:

--- a/src/components/SignupModal/SignupModal.css
+++ b/src/components/SignupModal/SignupModal.css
@@ -3,6 +3,6 @@
   margin-bottom: 8px;
 }
 
-.form__label:last-of-type {
+.modal_type_signup-modal .form__label:last-of-type {
   margin-bottom: 17px;
 }
